# server/docs/swagger-output.json
@@ -18,6 +18,46 @@
     }
   ],
   "paths": {
+    "/api/v1/repos/sync/manual": {
+      "post": {
+        "tags": ["Repositories"],
+        "summary": "Manual synchronization",
+        "description": "Manual synchronization",
+        "operationId": "manualSync",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ResponseManualSyncSchema"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Response400Schema"
+                }
+              }
+            }
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/RequestManualSyncSchema"
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/repos/sync/status": {
       "get": {
         "tags": ["Repositories"],
@@ -233,6 +273,22 @@
       }
     },
     "schemas": {
+      "RequestManualSyncSchema": {
+        "type": "object",
+        "required": ["lang", "stars"],
+        "properties": {
+          "lang": {
+            "type": "string",
+            "example": "javascript",
+            "description": "Programming language"
+          },
+          "stars": {
+            "type": "number",
+            "example": 100,
+            "description": "GitHub repository stars amount"
+          }
+        }
+      },
       "ResponseAutoSyncEnableSchema": {
         "type": "object",
         "required": ["message"],
@@ -362,6 +418,17 @@
             "type": "string",
             "example": "JavaScript",
             "description": "Repository language"
+          }
+        }
+      },
+      "ResponseManualSyncSchema": {
+        "type": "object",
+        "required": ["message"],
+        "properties": {
+          "message": {
+            "type": "string",
+            "example": "Sync completed successfully!",
+            "description": "Success message for manual sync"
           }
         }
       },
