# server/utils/validationSchemas/repositoriesSync.js
@@ -1,9 +1,10 @@
 import { z } from "zod";
+import { syncReposLangs, syncReposStars } from "#shared/constants/index.js";
 
 const manualSyncRepositoriesSchema = z.object({
   body: z.object({
-    programLanguage: z.string(),
-    minStarsAmount: z.number().min(0),
+    lang: z.enum(syncReposLangs),
+    stars: z.number().nonnegative().optional().default(syncReposStars),
   }),
 });
 
@@ -16,7 +17,7 @@ const getRepositorySchema = z.object({
 const getRepositoriesListSchema = z.object({
   query: z.object({
     query: z.string().optional(),
-    sort: z.string().optional().default("stargazers_count"),
+    sort: z.enum(["name", "stargazers_count", "language"]).optional().default("stargazers_count"),
     order: z.enum(["1", "-1"]).optional().default("-1"),
     limit: z.coerce.number().min(1).max(100).default(10),
     offset: z.coerce.number().min(0).default(0),
